syntax = "proto3";
package protocol;

//optimize_for 加快解析的速度
option optimize_for = SPEED;
option java_package = "com.ykt.im.socket.protobuf";
option java_outer_classname = "UserInfoWrap";

message UserInfo {
    string corpid = 1;      //企业ID
    string userid = 2;      //成员UserID
    string name = 3;        //姓名
    string corp_name = 4;   //企业名称
    string mobile = 5;      //手机号
    int32 gender = 6;       //性别,0未知1男2女
    string email = 7;       //邮箱
    string avatar = 8;      //成员头像url
}